--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Min extra fina webbsida</h1>
     <p>Här kan du se vad jag har gjort tidigare:...</p>
+    <a href="https://dn.se">Nyheter</a>
 </body>
 </html>
